--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Student site</title>
 </head>
 <body>
-    Hi! I am Vidisha.
+    Hi! I am Vidisha. I live in Pune. I'm doing my BTech in Information Technology from CCOEW Pune.
 </body>
 </html>
