added pages and design

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | vidisha pandey</title>
+    <title>projects | vidisha pandey</title>
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -13,10 +13,10 @@
         <div class="nav-brand">IAMLEARNER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="index.html">home</a>
+                <a class="link" href="index.html">home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="projects.html">projects</a>
+                <a class="link link-active" href="projects.html">projects</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="blogs.html">blogs</a>
@@ -25,33 +25,33 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/undraw_working_late_pukg.svg">
-        <h1 class="hero-heading" >Vidisha Pandey the <span class="heading-highlight">web developer</span></h1>
-    </header>
+        <h1 class="hero-heading" >my <span class="heading-highlight">projects</span></h1>
+    </header>    
 
-    <section class="section ow">
+    <ul class="list-non-bullet">
         <div class="container container-center">
-            <h1>technologies</h1>
-            <p>I'm familiar with HTML5, CSS, Git, JavaScript, NodeJS, ReactJS and Web Hosting.</p>
+            <li>
+                <h1>cricket fan?</h1>
+                <small>May, 2021</small>
+                <p>Another nodeJS CLI app. This checks your knowledge on Indian Cricket.</p>
+                <a class="link link-primary" href="repl.it">Live Project</a>
+                <a class="link link-secondary" href="github.com/repolink">View source code on Github</a>
+            </li>
         </div>
-    </section>
-
-    <section class="section">
+        <br>
         <div class="container container-center">
-            <h1>projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link link-primary" href = "projects.html">BROWSE PROJECTS</a>
+            <li>
+                <h1>how well do you know me?</h1>
+                <small>May, 2021</small>
+                <p>A CLI app built with <strong>nodeJS</strong>.</p>
+                <a class="link link-primary" href="repl.it">Live Project</a>
+                <a class="link link-secondary" href="github.com/repolink">View source code on Github</a>
+            </li>
         </div>
-    </section>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>blogs</h1>
-            <p>I am also working on some technical blogs. I like to document my journey of learning.</p>
-            <a class="link link-primary" href = "blogs.html">READ BLOGS</a>
-        </div>
-    </section>
-
+    </ul>
+    <br>
+    <br>
     <footer class="footer container">
         <div class="footer-header">connect socially : </div>
         <ul class="social-links list-non-bullet">
@@ -66,6 +66,7 @@
             </li> -->
         </ul>
     </footer>
+
 
 </body>
 </html>
