--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="footer-header">connect socially : </div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="/">github</a>
+                <a class="link" href="https://github.com/Vidisha780">github</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">linkedIn</a>
+                <a class="link" href="www.linkedin.com/in/vidishapandey">linkedIn</a>
             </li>
             <!-- <li class="list-item-inline">
                 <a class="link" href="/">SocialThree</a>
