--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
                 <h1>cricket fan?</h1>
                 <small>May, 2021</small>
                 <p>Another nodeJS CLI app. This checks your knowledge on Indian Cricket.</p>
-                <a class="link link-primary" href="repl.it">Live Project</a>
-                <a class="link link-secondary" href="github.com/repolink">View source code on Github</a>
+                <a class="link link-primary" href="https://replit.com/@vidishapandey/Cricket#index.js">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Vidisha780/Cricket-quiz">View source code on Github</a>
             </li>
         </div>
         <br>
@@ -44,8 +44,8 @@
                 <h1>how well do you know me?</h1>
                 <small>May, 2021</small>
                 <p>A CLI app built with <strong>nodeJS</strong>.</p>
-                <a class="link link-primary" href="repl.it">Live Project</a>
-                <a class="link link-secondary" href="github.com/repolink">View source code on Github</a>
+                <a class="link link-primary" href="https://replit.com/@vidishapandey/firstProject#index.js">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Vidisha780/Do-You-Know-Me--">View source code on Github</a>
             </li>
         </div>
 
