--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a class="link" href="https://github.com/Vidisha780">github</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="www.linkedin.com/in/vidishapandey">linkedIn</a>
+                <a class="link" href="https://www.linkedin.com/in/vidishapandey/">linkedIn</a>
             </li>
             <!-- <li class="list-item-inline">
                 <a class="link" href="/">SocialThree</a>
