--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header class="hero">
         <img class="hero-img" src="images/undraw_working_late_pukg.svg">
-        <h1 class="hero-heading" >Vidisha Pandey the <span class="heading-highlight">web developer</span></h1>
+        <h1 class="hero-heading" >Vidisha Pandey </h1>//the <span class="heading-highlight">web developer</span></h1>
     </header>
 
     <section class="section ow">
