--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>technologies</h1>
-            <p>I'm familiar with HTML5, CSS, Git, JavaScript, NodeJS, ReactJS and Web Hosting.</p>
+            <p>I'm familiar with HTML5, CSS, Git, JavaScript, and Web Hosting.</p>
+<!--             <p>I'm familiar with HTML5, CSS, Git, JavaScript, NodeJS, ReactJS and Web Hosting.</p> -->
         </div>
     </section>
 
