--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,27 @@
     </header>    
 
     <ul class="list-non-bullet">
+            <div class="container container-center">
+            <li>
+                <h1>Dictionary</h1>
+                <small>June, 2021</small>
+                <p>Implemented <strong>dictionary</strong> using trie data structure with different functionalities like add words, delete words, update meaning of a word among others.</p>
+                <a class="link link-primary" href="https://github.com/vinitachimalgi/Dictionary">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/vinitachimalgi/Dictionary">View source code on Github</a>
+            </li>
+        </div>
+        <br>
+        <div class="container container-center">
+            <li>
+                <h1>YouTube Clone</h1>
+                <small>June, 2021</small>
+                <p>A clone of YouTube's desktop version with functioning search bar.</p>
+                <a class="link link-primary" href="https://youtubeclone7.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Vidisha780/YouTube-Clone">View source code on Github</a>
+            </li>
+        </div>
+        <br>
+
         <div class="container container-center">
             <li>
                 <h1>cricket fan?</h1>
