Update project links

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
                 <h1>Dictionary</h1>
                 <small>June, 2021</small>
                 <p>Implemented <strong>dictionary</strong> using trie data structure with different functionalities like add words, delete words, update meaning of a word among others.</p>
-                <a class="link link-primary" href="https://github.com/vinitachimalgi/Dictionary">Live Project</a>
+                <a class="link link-primary" href="https://drive.google.com/file/d/1105yRh99qUzbzf68eq_-94jl2WOY-yX3/view">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/vinitachimalgi/Dictionary">View source code on Github</a>
             </li>
         </div>
